--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ frontend/.env*
 .DS_Store
 *.log
 
-!data/
-!data/transcripts/
-!data/transcripts/*.txt
-!data/metadata.json
+# Explicitly include data files
+backend/data/transcripts/*.txt
+backend/data/metadata.json
